// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remove-overridden-custom-properties > overridden custom properties should be removed 1`] = `
"/* stylelint-disable docusaurus/copyright-header, declaration-block-no-duplicate-custom-properties */
:root {
  --color-secondary: green;
  --color-primary: blue;
  --color-header: gray;
}

.non-root {
  --color-primary: red;
  --color-primary: red;
}
"
`;

exports[`remove-overridden-custom-properties > overridden custom properties with \`!important\` rule should not be removed 1`] = `
"/* stylelint-disable docusaurus/copyright-header, declaration-block-no-duplicate-custom-properties */
:root {
  --color-primary: blue;
  --color-header: gray !important;
  --color-secondary: yellow !important;
}
"
`;
